<resources>
    <!-- App intro strings -->
    <string name="app_name">My Notes</string>
    <string name="slogan">Think it… Note it… Save it!</string>
    <string name="slogan_name">NOTES APP</string>
    <!-- Button strings -->
    <string name="btn_start">Start</string>
    <string name="btn_help">Help</string>
    <string name="btn_new_note">New note</string>
    <string name="btn_all_notes">All notes</string>
    <string name="btn_add">Add</string>
    <string name="btn_back">Back</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_filter">Filter</string>
    <string name="btn_continue">Continue</string>
    <!-- Text strings -->
    <string name="txt_welcome">Welcome back!</string>
    <string name="txt_select_operation">Select operation</string>
    <string name="txt_edit">New and edit notes</string>
    <string name="txt_all">All notes</string>
    <string name="txt_view">View note</string>
    <string name="txt_create_note_first">Create a new note first!</string>
    <string name="txt_create_account">Create an account</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_create_acc">Create account</string>
    <string name="txt_login">Login</string>
    <string name="txt_request_login">User created, now login</string>
    <string name="txt_delete_acc">Delete account</string>
    <string name="txt_delete_acc_desc">Deleting your account will delete also all of your notes!</string>
    <string name="txt_searches">Search for your notes</string>
    <string name="txt_searches_options">Select an option to filter by:</string>
    <string name="txt_searches_input">Data</string>
    <string name="txt_search">Search</string>
    <string name="txt_help_title">User manual</string>
    <string-array name="userHelp">
        <item>Create an account with a username and a password. This will be required to access the app in future logins.</item>
        <item>Do not forget the password! Otherwise you will not be able to login.</item>
        <item>On the start screen, press the `Start` button.</item>
        <item>On the next screen you will be able to: see all notes, create a new note, filter for your notes.</item>
        <item>On the create new notes screen, a note can contain: a title, description and tags. You will be able to filter by these fields and by date of creation of the notes.</item>
        <item>To visualize all notes click on the All notes button on the home screen. Later on the list you will be able to: see your notes in more detail, modify them or delete them.</item>
        <item>You can always delete your account on the home screen pressing the delete button. Keep in mind that this will delete all notes!</item>
    </string-array>
    <string name="txt_img_add">AddTag</string>
    <!-- Input strings -->
    <string name="input_title">Title</string>
    <string name="input_description">Description</string>
    <string name="input_tags">Tags</string>
</resources>