<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotesHome">

    <include layout="@layout/menu" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="333dp"
        android:layout_height="41dp"
        android:fontFamily="casual"
        android:text="@string/txt_select_operation"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/buttonAllNotes"
        android:layout_width="173dp"
        android:layout_height="54dp"
        android:layout_marginBottom="364dp"
        android:backgroundTint="#DEA049"
        android:fontFamily="casual"
        android:onClick="all"
        android:text="@string/btn_all_notes"
        android:textAllCaps="false"
        android:textColor="#455A64"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/note_folder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.848" />

    <Button
        android:id="@+id/buttonFilter"
        android:layout_width="173dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#DEA049"
        android:fontFamily="casual"
        android:onClick="filter"
        android:text="@string/btn_filter"
        android:textAllCaps="false"
        android:textColor="#455A64"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewNote" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/buttonNewNote"
        android:layout_width="173dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#DEA049"
        android:fontFamily="casual"
        android:onClick="newOrEdit"
        android:text="@string/btn_new_note"
        android:textAllCaps="false"
        android:textColor="#455A64"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/note_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAllNotes" />

</androidx.constraintlayout.widget.ConstraintLayout>